fixing refresh loader creating scrollbars

--- a/client/src/components/ProfileModal.css
+++ b/client/src/components/ProfileModal.css
@@ -37,7 +37,7 @@
 }
 
 .loading-container {
-  width: 120vw;  
+  width: 90vw;  
   margin: 2rem auto;
   padding: 2rem;
   text-align: center;
